# super-simple-python-gemini-agent

./: .gitignore  README.md  main.py  pyproject.toml
gemini_agent/: main.py
