[tool.poetry]
name = "super-simple-python-gemini-agent"
version = "0.1.0"
description = "A super-simple Python Gemini agent using LangChain."
authors = ["Brady Anderson <brady@bradyanderson.tech>"]
readme = "README.md"
packages = [{ include = "gemini_agent" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = ">=0.3.18"
google-generativeai = ">=0.8.4"
python-dotenv = ">=1.0.0"
langchain-google-genai = ">=2.0.9"
langchain-core = ">=0.3.35"
langgraph = ">=0.2.72,<0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gemini-chat = "gemini_agent.main:main"
